close to api handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=rho-interview-challenge
+spring.config.import=file:./.env[.properties]
+
+exchangerateapi.url=https://api.exchangerate.host/live?access_key=${EXCHANGE_RATE_KEY}
