Rate limiting runtime configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=rho-interview-challenge
 spring.config.import=file:./.env[.properties]
 
 exchangerateapi.url=https://api.exchangerate.host/live?access_key=${EXCHANGE_RATE_KEY}
+exchangerateapi.cache_duration=${CACHE_DURATION}
+
+debug=true
+
+# Resilience4j Rate Limiter Configuration
+#  Allows Y requests per period.
+#  The rate limit resets every X seconds.
+#  If the limit is exceeded, the request will be blocked.
+resilience4j.ratelimiter.instances.exchangeRateLimiter.limitForPeriod=${LIMIT_FOR_PERIOD}
+resilience4j.ratelimiter.instances.exchangeRateLimiter.limitRefreshPeriod=${LIMIT_REFRESH_PERIOD}
+resilience4j.ratelimiter.instances.exchangeRateLimiter.timeoutDuration=${TIMEOUT_DURATION}
