Optional because env file ins not imported to the container, instead, it is provided on runtime

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=rho-interview-challenge
-spring.config.import=file:./.env[.properties]
+spring.config.import=optional:file:./.env[.properties]
 
 exchangerateapi.url=https://api.exchangerate.host/live?access_key=${EXCHANGE_RATE_KEY}
 exchangerateapi.cache_duration=${CACHE_DURATION}
-
-debug=true
 
 # Resilience4j Rate Limiter Configuration
 #  Allows Y requests per period.
