SSL and reorganization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.config.import=optional:file:./.env[.properties]
 
 exchangerateapi.url=https://api.exchangerate.host/live?access_key=${EXCHANGE_RATE_KEY}
 exchangerateapi.cache_duration=${CACHE_DURATION}
+exchangerateapi.jwt_secret=${JWT_SECRET}
 
 # Resilience4j Rate Limiter Configuration
 #  Allows Y requests per period.
@@ -11,3 +12,9 @@ exchangerateapi.cache_duration=${CACHE_DURATION}
 resilience4j.ratelimiter.instances.exchangeRateLimiter.limitForPeriod=${LIMIT_FOR_PERIOD}
 resilience4j.ratelimiter.instances.exchangeRateLimiter.limitRefreshPeriod=${LIMIT_REFRESH_PERIOD}
 resilience4j.ratelimiter.instances.exchangeRateLimiter.timeoutDuration=${TIMEOUT_DURATION}
+
+server.port: 8080
+server.ssl.key-store: ./keystore.p12
+server.ssl.key-store-password: ${KEYSTORE_PASSWORD}
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: rho-interview
