--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.4'
+
 services:
   api:
     build: .
@@ -6,3 +7,14 @@ services:
       - "8080:8080"
     env_file:
       - .env
+    depends_on:
+      - mongo  # Ensures MongoDB starts before API
+    environment:
+      DATABASE_URL: mongodb://root:example@mongo:27017/
+
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
