Working on OAuth and JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.config.import=optional:file:./.env[.properties]
 exchangerateapi.url=https://api.exchangerate.host/live?access_key=${EXCHANGE_RATE_KEY}
 exchangerateapi.cache_duration=${CACHE_DURATION}
 exchangerateapi.jwt_secret=${JWT_SECRET}
+mongo.db.url=${DATABASE_URL}
 
 # Resilience4j Rate Limiter Configuration
 #  Allows Y requests per period.
@@ -18,3 +19,4 @@ server.ssl.key-store: ./keystore.p12
 server.ssl.key-store-password: ${KEYSTORE_PASSWORD}
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: rho-interview
+
