--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,15 @@ spring.config.import=optional:file:./.env[.properties]
 
 exchangerateapi.url=https://api.exchangerate.host/live?access_key=${EXCHANGE_RATE_KEY}
 exchangerateapi.cache_duration=${CACHE_DURATION}
-exchangerateapi.jwt_secret=${JWT_SECRET}
-mongo.db.url=${DATABASE_URL}
+
+# Auth Configuration
+access-token.private=${ACCESS_TOKEN_PRIVATE_KEY_PATH}
+access-token.public=${ACCESS_TOKEN_PUBLIC_KEY_PATH}
+refresh-token.private=${REFRESH_TOKEN_PRIVATE_KEY_PATH}
+refresh-token.public=${REFRESH_TOKEN_PUBLIC_KEY_PATH}
+
+spring.data.mongodb.uri=mongodb://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?authSource=admin
+spring.data.mongodb.database=${DATABASE_NAME}
 
 # Resilience4j Rate Limiter Configuration
 #  Allows Y requests per period.
